# axum-spa-example

./: .gitignore  README.md  docker-compose.yml  package-lock.json
be/: Cargo.toml  Dockerfile
be/src/: main.rs  resp.rs
be/src/routers/: mod.rs  room.rs
fe/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
fe/src/: index.html  styles.scss
fe/src/app/: api-response.ts  api.service.ts  app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
fe/src/app/about/: about.component.html  about.component.scss  about.component.ts
fe/src/app/home/: home.component.html  home.component.scss
fe/src/app/join-room/: join-room.component.html  join-room.component.scss  join-room.component.ts
fe/src/app/navbar/: navbar.component.html
fe/src/app/notification/: notification.dialog.html  notification.dialog.ts
fe/src/environments/: environment.prod.ts
