[package]
name = "axum-spa-example-be"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
axum-debug = "0.3.2"
tracing = "0.1"
tracing-subscriber = "0.2.0"
tokio = { version = "1", features = ["full"] }
